# wonka-fronted

./: .gitignore  ACTUALIZACIONES.md  index.html  package.json  tsconfig.app.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AdminGatekeeper.tsx  AttendanceModal.tsx  CashDrawerGuard.tsx  CashOpeningModal.tsx  CreateBillingNoteModal.tsx  PinPad.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sidebar.tsx  table.tsx  tabs.tsx
src/lib/: api.ts
src/pages/: AdminScreen.tsx  BillingNotesScreen.tsx  CashCloseHistoryScreen.tsx  CashierScreen.tsx  EmployeesScreen.tsx  InventoryScreen.tsx  LoginScreen.tsx  POSScreen.tsx  PlayZoneScreen.tsx  ReportsScreen.tsx  Splash.tsx
src/store/: adminStore.ts  authStore.ts  cartStore.ts  cashDrawerStore.ts  paymentLedgerStore.ts  playzoneTicketStore.ts
src/types/: index.ts
~/.tauri/: wonka.key  wonka.key.pub
